blurred img added, ol in post fixed

--- a/newsite/src/sass/_inner.sass
+++ b/newsite/src/sass/_inner.sass
@@ -936,12 +936,12 @@
 			counter-reset: list
 			li
 				position: relative
-				padding-left: 10px
+				padding-left: 5px
 				margin-bottom: 10px
 				&:before
 					position: absolute
 					top: -7px
-					left: -10px
+					right: 100%
 					font-size: 20px
 					counter-increment: list 1
 					content: counter(list)"."
